<resources>
    <string name="app_name">kalkulatorek</string>
    <string name="simple">simple</string>
    <string name="hello">Hello</string>
    <string name="hello2">hello2</string>
    <string name="advanced">advanced</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="hello3">hello3</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSub">-</string>
    <string name="buttonMul">*</string>
    <string name="buttonDiv">/</string>
    <string name="buttonBackspace">Bksp</string>
    <string name="buttonClear">C</string>
    <string name="buttonReverse">+/-</string>
    <string name="buttonDot">.</string>
    <string name="buttonEqual">=</string>
    <string name="x2">x2</string>
    <string name="backspace">Backspace</string>
    <string name="c">C</string>
    <string name="plusMinus">+/-</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="sqrt">sqrt</string>
    <string name="x_2">x^2</string>
    <string name="x_y_">x^y</string>
    <string name="log">log</string>
    <string name="ilona_dziuba_towska">Ilona Dziubałtowska</string>
    <string name="_202140">202140</string>
    <string name="kalkulator">Kalkulator</string>
</resources>
