<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="287dp"
        android:layout_marginEnd="212dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="100dp"
        android:text="@string/ilona_dziuba_towska"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="140dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="212dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="7dp"
        android:text="@string/_202140"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginBottom="287dp"
        android:layout_marginEnd="212dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="200dp"
        android:text="@string/kalkulator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

</android.support.constraint.ConstraintLayout>